--- a/008_modeling_result_sumstat.Rmd
+++ b/008_modeling_result_sumstat.Rmd
@@ -43,34 +43,86 @@ df_downsample <- readRDS(paste0(fileDir, "df_downsample.RData"))
 ```
 
 # Sampled data summary statistics
+
+## Herd size and cow count across years
+
 ```{r}
 cat("Downsampled dataset has", nrow(df_downsample), "events,",
     unique(df_downsample$AnimalDurableCode) %>% length(), "cows, and",
     unique(df_downsample$HerdDurableKey) %>% length(), "herds.")
 
-group_by(df_downsample, herd_milk_type, HerdDurableKey) %>% 
+group_by(df_downsample, new_milk_type, HerdDurableKey) %>% 
   summarise(count = n()) %>% 
-  ungroup() %>% group_by(herd_milk_type) %>% tally() %>% 
+  ungroup() %>% group_by(new_milk_type) %>% 
+  tally() %>% 
   mutate(prop = n/sum(n)) %>% 
   knitr::kable(align = "l", 
-               caption = "N herds by herd Regime type", digits = 2) %>% 
+               caption = "Total N herds by milking type across years",
+               digits = 2) %>% 
   kable_styling(full_width = T)
 
-group_by(df_downsample, herd_milk_type, new_milk_type) %>% 
- # summarise(count = n()) %>% 
-  #ungroup() %>% group_by(herd_milk_type, new_milk_type) %>% 
+select(df_downsample, new_milk_type, AnimalDurableCode) %>% 
+  distinct() %>% 
+  group_by(new_milk_type) %>% 
   tally() %>% ungroup() %>% 
   mutate(prop = n/sum(n)) %>% 
   knitr::kable(align = "l",
-               caption = "N animals by milking type", digits = 3,
+               caption = "Total N animals by milking type across years", 
+               digits = 3,
                format.args = list(big.mark=",")) %>% 
   kable_styling(full_width = T)
+```
+
+## count by age parity
+
+Herd size by age parity
+
+```{r herd_size_by_age}
+
+group_by(df_downsample, new_milk_type, AgeParity, HerdDurableKey) %>% 
+  summarise(count = n()) %>% 
+  ungroup() %>% group_by(new_milk_type, AgeParity) %>% 
+  tally() %>% ungroup() %>% 
+  mutate(prop = n/sum(n), AgeParity = as.factor(AgeParity)) %>% 
+  # knitr::kable(align = "l", 
+  #              caption = "N herds by herd Regime type and Age parity", digits = 2) %>% 
+  # kable_styling(full_width = T)
+  ggplot(aes(new_milk_type, n, fill = AgeParity)) +
+  geom_bar(stat = "identity", width = .8, color = "black", 
+           position = position_dodge(.8)) +
+  labs(x = "") +
+  theme_pubclean() +
+  scale_fill_brewer(palette = "Set3")
+```
+
+Number of cows by age parity
+
+```{r n_cows_by_age}
+group_by(df_downsample, herd_milk_type, AgeParity, new_milk_type) %>% 
+ # summarise(count = n()) %>% 
+  #ungroup() %>% group_by(herd_milk_type, new_milk_type) %>% 
+  tally() %>% ungroup() %>% 
+  mutate(prop = n/sum(n), AgeParity = as.factor(AgeParity)) %>% 
+  # knitr::kable(align = "l",
+               # caption = "N animals by milking type", digits = 3,
+               # format.args = list(big.mark=",")) %>% 
+  # kable_styling(full_width = T)
+  ggplot(aes(new_milk_type, n, fill = AgeParity)) +
+  geom_bar(stat = "identity", width = .8, color = "black", 
+           position = position_dodge(.8)) +
+  scale_y_continuous(breaks = c(0, 5000, 10000, 50000, 100000, 150000)) +
+  labs(x = "") +
+  theme_pubclean() +
+  scale_fill_brewer(palette = "Set3")
+
 ```
 
 ```{r essential_traits}
 essential_traits <- c("BodyConditionScore", "Fertility_CR42", 
                       "FunctionalSurvival", "SomaticCellScore",
-                      "TOP_UdderSupport", "TotalVolume", "TotalFat", "TotalProtein")
+                      "TotalVolume", "TotalFat", "TotalProtein",
+                      "TOP_UdderSupport", "TOP_MilkingSpeed", "TOP_Capacity", 
+                      "TOP_FrontTeat" )
 ```
 
 # Simple model within each survival and milk_type levels
@@ -139,7 +191,7 @@ df_anova_glms_GBV <- test$gbv$anova
 
 ```{r, echo=FALSE, eval=FALSE}
 # CONVERT COEF OUTPUT
-print_coef <- select(df_coef_glms, -matches("value")) %>% 
+print_coef <- select(df_coef_glms_EBV, -matches("value")) %>% 
   pivot_wider(names_from = milk_type, values_from = c(Estimate, Std..Error, sign),
                names_glue = "{milk_type}_{.value}") %>% 
   select(survival, Trait, matches("OAD"), matches("TAD"), 
@@ -162,7 +214,7 @@ select(print_coef, survival, Trait, matches("OAD")) %>%
 
 ##### TAD and OAD only
 
-```{r simple_model_coef, fig.show='asis', fig.height=12, fig.width=8}
+```{r simple_model_coef, fig.show='asis', fig.height=16, fig.width=8}
 invisible( # avoind printing lapply outputs e.g. [1][[1]] [2][[2]]
   lapply(c("EBV", "GBV"), function(bv) {
  # lapply(seq(essential_traits), function(i) {
@@ -220,7 +272,7 @@ invisible( # avoind printing lapply outputs e.g. [1][[1]] [2][[2]]
 
 ##### All 5 milking types
 
-```{r simple_model_coef1, fig.show='asis', fig.height=12, fig.width=8}
+```{r simple_model_coef1, fig.show='asis', fig.height=16, fig.width=8}
 
 invisible(
   lapply(c("EBV", "GBV"), function(bv) {
@@ -327,7 +379,7 @@ invisible(
 
 #### Essential traits 
 
-```{r coef_ebv_gbv_simple, fig.width=8, fig.height=12}
+```{r coef_ebv_gbv_simple, fig.width=8, fig.height=16}
 
 df <- rbind(df_coef_glms_EBV, df_coef_glms_GBV)
 write.csv(df, paste0(outputDir, "coef_glm_all.csv"))
@@ -483,7 +535,7 @@ The stars mean if their effects are significant in the model.
 
 #### Essential traits
 
-```{r coef, fig.width=8, fig.height=12}
+```{r coef, fig.width=8, fig.height=16}
 # bv <- "EBV"
 
 invisible(lapply(c("EBV", "GBV"), function(bv) {
@@ -563,7 +615,7 @@ knitr::kable(print_coef, align = "l",
 
 #### Essential traits
 
-```{r coef_ebv_gbv, fig.width=8, fig.height=12}
+```{r coef_ebv_gbv, fig.width=8, fig.height=16}
 
 df_coef_glms_EBV$evaluation <- "EBV"
 df_coef_glms_GBV$evaluation <- "GEBV"
